--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,12 @@
     <%= stylesheet_link_tag    'application', media: 'all',
                                               'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
   </head>
   <body>
-   <%=render"layouts/header"%>
+    <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
-      <%=render"layouts/footer"%>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
-
 </html>
